<?xml version="1.0"?>
<package format="2">
  <name>lidar_camera_calibration_tool</name>
  <version>0.1.0</version>
  <description>The lidar_camera_calibration_tool package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>image_transport</build_depend>
<exec_depend>image_transport</exec_depend>


  <export>
    <rosconsole></rosconsole>
  </export>
</package>
